--- a/Cyberduck/Cyberduck/Views/DatatransferPage/Components/Datatransfer.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/Components/Datatransfer.xaml
@@ -4,9 +4,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cyberduck.Views.DatatransferPage.Components"
+    xmlns:local1="using:Cyberduck.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <local1:DatatransferTypeToIconConverter x:Key="TypeToIconConverter" />
+    </UserControl.Resources>
 
     <Grid
         CornerRadius="4"
@@ -27,25 +32,24 @@
         </Grid.ColumnDefinitions>
 
         <!-- Icon -->
-        <!-- TODO Fix Binding issue! -->
         <StackPanel Grid.Column="0" VerticalAlignment="Center">
-            <FontIcon Glyph="&#xE896;" />
+            <FontIcon x:Name="icon" Glyph="{Binding Typ, Converter={StaticResource TypeToIconConverter}}" />
         </StackPanel>
 
         <!-- Connection Description -->
         <StackPanel Grid.Column="1" VerticalAlignment="Center" MinWidth="150">
-            <TextBlock Text="Bilder" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
-            <TextBlock Text="Download fertig..." FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
+            <TextBlock Text="{Binding FileName}" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
+            <TextBlock Text="{Binding StateAsText}" FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
         </StackPanel>
 
         <!-- Modification Date -->
         <StackPanel Grid.Column="3" VerticalAlignment="Center" Margin="24 0 24 0">
-            <TextBlock Text="07.07.2023 18:34" FontSize="14" TextWrapping="NoWrap" />
+            <TextBlock Text="{Binding ModificationDate}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
         <!-- File Size -->
         <StackPanel Grid.Column="4" VerticalAlignment="Center"  Margin="24 0 24 0">
-            <TextBlock Text="8 KiB" FontSize="14" TextWrapping="NoWrap" />
+            <TextBlock Text="{Binding Size}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
         <!-- State -->
