--- a/Cyberduck/Cyberduck/Views/DatatransferPage/Components/DatatransferGroup.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/Components/DatatransferGroup.xaml
@@ -7,7 +7,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
-    
+
     <Expander HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
         <Expander.Header>
             <Grid
@@ -53,43 +53,13 @@
             </Grid>
         </Expander.Header>
         <Expander.Content>
-            <Grid Padding="36 0 44 0" ColumnSpacing="16" Height="Auto" HorizontalAlignment="Stretch">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <!-- Connection Description -->
-                <StackPanel Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" MinWidth="150">
-                    <TextBlock Text="asdfasdadadfadsfadfadfadfasfdfdsa" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
-                </StackPanel>
-
-                <!-- Modification Date -->
-                <StackPanel Grid.Column="2" Grid.Row="0" VerticalAlignment="Center">
-                    <TextBlock Text="07.07.2023 18:34" FontSize="14" TextWrapping="NoWrap" />
-                </StackPanel>
-
-                <!-- File Size -->
-                <StackPanel Grid.Column="3" Grid.Row="0" VerticalAlignment="Center" Margin="24 0 24 0">
-                    <TextBlock Text="800990 KiB" FontSize="14" TextWrapping="NoWrap" />
-                </StackPanel>
-
-                <!-- State -->
-                <StackPanel Grid.Column="4" Grid.Row="0" VerticalAlignment="Center" Margin="24 0 4 0">
-                    <!-- TODO fix show icon-->
-                    <InfoBadge Style="{StaticResource SuccessIconInfoBadgeStyle}" />
-                </StackPanel>
-
-                <Border Grid.Row="1" Grid.ColumnSpan="5" BorderThickness="0,1,0,0" BorderBrush="LightGray" Margin="0,10,0,0"/>
-            </Grid>
+            <StackPanel Orientation="Vertical" Spacing="10">
+                <local:DatatransferGroupItem/>
+                <local:DatatransferGroupItem/>
+                <local:DatatransferGroupItem/>
+                <local:DatatransferGroupItem/>
+            </StackPanel>
         </Expander.Content>
-        
+
     </Expander>
 </UserControl>
