--- a/Cyberduck/Cyberduck/Views/DatatransferPage/Components/Datatransfer.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/Components/Datatransfer.xaml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <UserControl
     x:Class="Cyberduck.Views.DatatransferPage.Components.Datatransfer"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
@@ -11,6 +10,7 @@
 
     <UserControl.Resources>
         <local1:DatatransferTypeToIconConverter x:Key="TypeToIconConverter" />
+        <local1:StateToVisibilityConverter x:Key="StateToVisibilityConverter" />
     </UserControl.Resources>
 
     <Grid
@@ -31,31 +31,43 @@
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
         <!-- Icon -->
-        <StackPanel Grid.Column="0" VerticalAlignment="Center">
+        <StackPanel Grid.RowSpan="2" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">
             <FontIcon x:Name="icon" Glyph="{Binding Typ, Converter={StaticResource TypeToIconConverter}}" />
         </StackPanel>
 
         <!-- Connection Description -->
-        <StackPanel Grid.Column="1" VerticalAlignment="Center" MinWidth="150">
+        <StackPanel Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" MinWidth="150" HorizontalAlignment="Left">
             <TextBlock Text="{Binding FileName}" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
             <TextBlock Text="{Binding StateAsText}" FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
         </StackPanel>
 
         <!-- Modification Date -->
-        <StackPanel Grid.Column="3" VerticalAlignment="Center" Margin="24 0 24 0">
+        <StackPanel Grid.Row="0" Grid.Column="3" VerticalAlignment="Center" Margin="24 0 24 0" HorizontalAlignment="Left">
             <TextBlock Text="{Binding ModificationDate}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
         <!-- File Size -->
-        <StackPanel Grid.Column="4" VerticalAlignment="Center"  Margin="24 0 24 0">
+        <StackPanel Grid.Row="0" Grid.Column="4" VerticalAlignment="Center"  Margin="24 0 0 0" HorizontalAlignment="Left">
             <TextBlock Text="{Binding Size}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
         <!-- State -->
-        <StackPanel Grid.Column="5" VerticalAlignment="Center" Margin="24 0 48 0">
+        <StackPanel Grid.RowSpan="2" Grid.Row="0" Grid.Column="5" VerticalAlignment="Center" Margin="16 0 48 0" HorizontalAlignment="Left">
             <!-- TODO fix show icon-->
             <InfoBadge x:Name="infoBadge2" Style="{StaticResource SuccessIconInfoBadgeStyle}" />
+        </StackPanel>
+
+       
+        <!-- Progress -->
+        <StackPanel Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Margin="0 12 0 0" Visibility="{Binding State, Converter={StaticResource StateToVisibilityConverter}}">
+            <ProgressBar Value="75" />
+            <TextBlock Text="75%" FontSize="14" TextWrapping="NoWrap" Margin="0 0 4 0" />
         </StackPanel>
     </Grid>
 </UserControl>
