--- a/Cyberduck/Cyberduck/Views/DatatransferPage/Components/Datatransfer.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/Components/Datatransfer.xaml
@@ -39,7 +39,7 @@
 
         <!-- Icon -->
         <StackPanel Grid.RowSpan="2" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <FontIcon x:Name="icon" Glyph="{Binding Typ, Converter={StaticResource TypeToIconConverter}}" />
+            <FontIcon x:Name="icon" Glyph="{Binding Converter={StaticResource TypeToIconConverter}}" />
         </StackPanel>
 
         <!-- Connection Description -->
@@ -58,20 +58,11 @@
             <TextBlock Text="{Binding Size}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
-        <!-- State --><!--
-        <StackPanel Grid.RowSpan="2" Grid.Row="0" Grid.Column="5" VerticalAlignment="Center" Margin="16 0 48 0" HorizontalAlignment="Left">
-            --><!-- TODO fix show icon--><!--
-            <InfoBadge x:Name="infoBadge2" Style="{StaticResource SuccessIconInfoBadgeStyle}" />
-            <ProgressRing IsActive="True" Width="10" Height="10" />
-        </StackPanel>-->
-
-
         <!-- State -->
         <StackPanel Grid.RowSpan="2" Grid.Row="0" Grid.Column="5" VerticalAlignment="Center" Margin="16 0 48 0" HorizontalAlignment="Left">
-            <!--<ProgressRing IsActive="True" Width="10" Height="10" Visibility="{Binding State, Converter={StaticResource StateToVisibilityConverter}, ConverterParameter=Progress}" />-->
             <InfoBadge x:Name="infoBadge2" Style="{Binding State, Converter={StaticResource StateToIconConverter}}" />
         </StackPanel>
-
+        
         <!-- Progress -->
         <StackPanel Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="4" Margin="0 12 0 0" Visibility="{Binding State, Converter={StaticResource StateToVisibilityConverter}}">
             <ProgressBar Value="{Binding Progress}" />
