--- a/Cyberduck/Cyberduck/Views/DatatransferPage/Components/DatatransferGroup.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/Components/DatatransferGroup.xaml
@@ -4,9 +4,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cyberduck.Views.DatatransferPage.Components"
+    xmlns:local1="using:Cyberduck.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <local1:DatatransferTypeToIconConverter x:Key="TypeToIconConverter" />
+    </UserControl.Resources>
 
     <Expander HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
         <Expander.Header>
@@ -24,9 +29,8 @@
                 </Grid.ColumnDefinitions>
 
                 <!-- Icon -->
-                <!-- TODO Fix Binding issue! -->
                 <StackPanel Grid.Column="0" VerticalAlignment="Center">
-                    <FontIcon Glyph="&#xE896;" />
+                    <FontIcon x:Name="icon" Glyph="{Binding Converter={StaticResource TypeToIconConverter}}" />
                 </StackPanel>
 
                 <!-- Connection Description -->
@@ -50,6 +54,7 @@
                     <!-- TODO fix show icon-->
                     <InfoBadge Style="{StaticResource SuccessIconInfoBadgeStyle}" />
                 </StackPanel>
+
             </Grid>
         </Expander.Header>
         <Expander.Content>
