--- a/Cyberduck/Cyberduck/Views/DatatransferPage/Components/DatatransferGroupItem.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/Components/DatatransferGroupItem.xaml
@@ -3,10 +3,14 @@
     x:Class="Cyberduck.Views.DatatransferPage.Components.DatatransferGroupItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Cyberduck.Views.DatatransferPage.Components"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="using:Cyberduck.Helpers"
     mc:Ignorable="d">
+
+    <UserControl.Resources>
+        <local:DatatransferStateToIconConverter x:Key="StateToIconConverter" />
+    </UserControl.Resources>
 
     <Grid Padding="36 0 44 0" ColumnSpacing="16" Height="Auto" HorizontalAlignment="Stretch">
         <Grid.RowDefinitions>
@@ -23,23 +27,23 @@
 
         <!-- Connection Description -->
         <StackPanel Grid.Column="0" Grid.Row="0" VerticalAlignment="Center" MinWidth="150">
-            <TextBlock Text="asdfasdadadfadfasdfadffadfasa" FontSize="14" TextWrapping="NoWrap"/>
+            <TextBlock Text="{Binding FileName}" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
         </StackPanel>
 
         <!-- Modification Date -->
         <StackPanel Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" Margin="24 0 24 0">
-            <TextBlock Text="07.07.2023 18:34" FontSize="14" TextWrapping="NoWrap" />
+            <TextBlock Text="{Binding ModificationDate}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
         <!-- File Size -->
         <StackPanel Grid.Column="3" Grid.Row="0" VerticalAlignment="Center" Margin="24 0 24 0">
-            <TextBlock Text="8 KiB" FontSize="14" TextWrapping="NoWrap" />
+            <TextBlock Text="{Binding Size}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
         <!-- State -->
         <StackPanel Grid.Column="4" Grid.Row="0" VerticalAlignment="Center" Margin="24 0 4 0">
             <!-- TODO fix show icon-->
-            <InfoBadge Style="{StaticResource SuccessIconInfoBadgeStyle}" />
+            <InfoBadge Style="{Binding State, Converter={StaticResource StateToIconConverter}}" />
         </StackPanel>
 
         <Border Grid.Row="1" Grid.ColumnSpan="5" BorderThickness="0,1,0,0" BorderBrush="LightGray" Margin="0,10,0,0"/>
