--- a/Cyberduck/Cyberduck/Views/DatatransferPage/Components/DatatransferGroup.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/Components/DatatransferGroup.xaml
@@ -11,6 +11,8 @@
 
     <UserControl.Resources>
         <local1:DatatransferTypeToIconConverter x:Key="TypeToIconConverter" />
+        <local1:DatatransferStateToIconConverter x:Key="StateToIconConverter" />
+        <local1:DatatransferGroupItemsLeftConverter x:Key="ItemsLeftConverter" />
     </UserControl.Resources>
 
     <Expander HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch">
@@ -35,36 +37,44 @@
 
                 <!-- Connection Description -->
                 <StackPanel Grid.Column="1" VerticalAlignment="Center" MinWidth="150">
-                    <TextBlock Text="Bilder" FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4" />
-                    <TextBlock Text="Download fertig..." FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
+                    <TextBlock FontSize="14" TextWrapping="NoWrap" Margin="0 0 0 4">
+                        <Run Text="{Binding Items[0].FileName}" />
+                        <Run Text="(" />
+                        <Run Text="{Binding Items.Count, Converter={StaticResource ItemsLeftConverter}, Mode=OneWay}" />
+                        <Run Text="weitere)" />
+                    </TextBlock>
+                    <TextBlock Text="{Binding Items[0].StateAsText}" FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
                 </StackPanel>
 
                 <!-- Modification Date -->
                 <StackPanel Grid.Column="3" VerticalAlignment="Center" Margin="24 0 24 0">
-                    <TextBlock Text="07.07.2023 18:34" FontSize="14" TextWrapping="NoWrap" />
+                    <TextBlock Text="{Binding Items[0].ModificationDate}" FontSize="14" TextWrapping="NoWrap" />
                 </StackPanel>
 
                 <!-- File Size -->
                 <StackPanel Grid.Column="4" VerticalAlignment="Center"  Margin="24 0 24 0">
-                    <TextBlock Text="8 KiB" FontSize="14" TextWrapping="NoWrap" />
+                    <!-- Caution! No Binding to ViewModel! -->
+                    <TextBlock Text="64 KiB" FontSize="14" TextWrapping="NoWrap" />
                 </StackPanel>
 
                 <!-- State -->
                 <StackPanel Grid.Column="5" VerticalAlignment="Center" Margin="24 0 4 0">
-                    <!-- TODO fix show icon-->
-                    <InfoBadge Style="{StaticResource SuccessIconInfoBadgeStyle}" />
+                    <InfoBadge Style="{Binding Items[0].State, Converter={StaticResource StateToIconConverter}}" />
                 </StackPanel>
 
             </Grid>
         </Expander.Header>
         <Expander.Content>
-            <StackPanel Orientation="Vertical" Spacing="10">
-                <local:DatatransferGroupItem/>
-                <local:DatatransferGroupItem/>
-                <local:DatatransferGroupItem/>
-                <local:DatatransferGroupItem/>
-            </StackPanel>
+            <!-- Other Items -->
+            <ItemsControl ItemsSource="{Binding Items}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Margin="0 0 0 10">
+                            <local:DatatransferGroupItem DataContext="{Binding}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </Expander.Content>
-
     </Expander>
 </UserControl>
