--- a/Cyberduck/Cyberduck/Views/DatatransferPage/DatatransferPage.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/DatatransferPage.xaml
@@ -25,14 +25,29 @@
     <Grid x:Name="ContentArea">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <!-- Command Bar -->
         <local:CommandBar></local:CommandBar>
 
+        <!-- Column Titles -->
+        <Grid Grid.Row="1"  Margin="48 12 48 12">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="168" />
+                <ColumnDefinition Width="104" />
+                <ColumnDefinition Width="80" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Margin="52 0 0 0" Text="Name" FontSize="14" Grid.Column="0" Foreground="Gray"/>
+            <TextBlock Text="Änderungsdatum" FontSize="14" Grid.Column="1" Foreground="Gray"/>
+            <TextBlock Text="Dateigrösse" FontSize="14" Grid.Column="2" Foreground="Gray"/>
+            <TextBlock Text="Status" FontSize="14" Grid.Column="3" Foreground="Gray"/>
+        </Grid>
+
         <!-- ListView for CombinedList -->
-        <ListView Grid.Row="1" ItemsSource="{Binding DatatransferObjects}" Margin="48 0 48 0">
+        <ListView Grid.Row="2" ItemsSource="{Binding DatatransferObjects}" Margin="48 0 48 0">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
