--- a/Cyberduck/Cyberduck/Views/DatatransferPage/DatatransferPage.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/DatatransferPage.xaml
@@ -47,7 +47,7 @@
         </Grid>
 
         <!-- ListView for CombinedList -->
-        <ListView Grid.Row="2" ItemsSource="{Binding DatatransferObjects}" Margin="48 0 48 0">
+        <ListView Grid.Row="2" ItemsSource="{Binding DatatransferObjects}" Margin="48 0 36 0" Padding="0 0 12 0">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
