--- a/Cyberduck/Cyberduck/Views/DatatransferPage/DatatransferPage.xaml
+++ b/Cyberduck/Cyberduck/Views/DatatransferPage/DatatransferPage.xaml
@@ -46,7 +46,7 @@
             <TextBlock Text="Status" FontSize="14" Grid.Column="3" Foreground="Gray"/>
         </Grid>
 
-        <!-- ListView for CombinedList -->
+        <!-- ListView for DatatransferObjects -->
         <ListView Grid.Row="2" ItemsSource="{Binding DatatransferObjects}" Margin="48 0 36 0" Padding="0 0 12 0">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
