--- a/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroupItem.xaml
+++ b/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroupItem.xaml
@@ -4,22 +4,28 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Cyberduck.Views.BookmarksPage.Components"
+    xmlns:local1="using:Cyberduck.Views.HistoryPage.Components"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Padding="36 0 44 0" ColumnSpacing="16" Height="Auto" HorizontalAlignment="Stretch">
+    <Grid ColumnSpacing="16" Height="Auto" HorizontalAlignment="Stretch">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
+
+        <!-- Icon -->
+        <StackPanel Grid.Column="0" VerticalAlignment="Center">
+            <FontIcon Glyph="&#xEDA2;" />
+        </StackPanel>
 
         <!-- Connection Description -->
         <StackPanel Grid.Column="1" VerticalAlignment="Center" MinWidth="150">
@@ -28,17 +34,43 @@
             <TextBlock Text="{Binding Username}" FontSize="12" TextWrapping="NoWrap" Foreground="Gray" />
         </StackPanel>
 
+        <!-- Tags -->
+        <ScrollViewer Grid.Column="2" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Auto">
+            <ListView ItemsSource="{Binding Tags}" ScrollViewer.HorizontalScrollBarVisibility="Auto" 
+                      IsHitTestVisible="False" SelectionMode="None">
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <VirtualizingStackPanel Orientation="Horizontal" HorizontalAlignment="Left"/>
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="FocusVisualPrimaryBrush" Value="Transparent" />
+                        <Setter Property="FocusVisualSecondaryBrush" Value="Transparent" />
+                        <Setter Property="FocusVisualPrimaryThickness" Value="0" />
+                        <Setter Property="FocusVisualSecondaryThickness" Value="0" />
+                        <Setter Property="IsTabStop" Value="False" />
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <local1:HistoryItemTag Tag="{Binding}" />
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </ScrollViewer>
+
         <!-- Modification Date -->
-        <StackPanel Grid.Column="2" Grid.Row="0" VerticalAlignment="Center" Margin="24 0 24 0">
+        <StackPanel Grid.Column="3" Grid.Row="0" VerticalAlignment="Center" Margin="24 0 24 0">
             <TextBlock Text="{Binding ModificationDate}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
         <!-- Type -->
-        <StackPanel Grid.Column="3" Grid.Row="0" VerticalAlignment="Center" Margin="24 0 4 0">
+        <StackPanel Grid.Column="4" Grid.Row="0" VerticalAlignment="Center">
             <!-- TODO fix show icon-->
             <TextBlock Text="{Binding Type}" FontSize="14" TextWrapping="NoWrap" />
         </StackPanel>
 
-        <Border Grid.Row="1" Grid.ColumnSpan="4" BorderThickness="0,1,0,0" BorderBrush="LightGray" Margin="0,10,0,0"/>
+        <Border Grid.Row="1" Grid.ColumnSpan="5" BorderThickness="0,1,0,0" BorderBrush="LightGray" Margin="0,10,0,0"/>
     </Grid>
 </UserControl>
