--- a/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroup.xaml
+++ b/Cyberduck/Cyberduck/Views/BookmarksPage/Components/BookmarkGroup.xaml
@@ -29,9 +29,12 @@
                 </StackPanel>
 
                 <!-- Connection Description -->
-                <StackPanel Grid.Column="1" VerticalAlignment="Center" MinWidth="150">
+                <StackPanel Grid.Column="1" VerticalAlignment="Center" MinWidth="200">
                     <TextBlock Text="{Binding Name}" FontSize="14" Margin="0 0 0 4" />
-                    <TextBlock Text="3 Lesezeichen" FontSize="12" Foreground="Gray" />
+                    <TextBlock FontSize="12" TextWrapping="NoWrap" Foreground="Gray">
+                        <Run Text="{Binding Items.Count}" />
+                        <Run Text="Lesezeichen" />
+                    </TextBlock>
                 </StackPanel>
 
                 <!-- Tags -->
@@ -61,8 +64,8 @@
                 </ScrollViewer>
 
                 <!-- Modification Date -->
-                <StackPanel Grid.Column="3" VerticalAlignment="Center">
-                    <TextBlock Text="{Binding Items[0].ModificationDate}" FontSize="14" TextWrapping="NoWrap" />
+                <StackPanel Grid.Column="3" VerticalAlignment="Center" Margin="0 0 48 0">
+                    <TextBlock Text="{Binding Items[0].ModificationDate}" FontSize="14" TextWrapping="NoWrap"/>
                 </StackPanel>
 
                 <!-- Type -->
