--- a/Cyberduck/Cyberduck/Views/ShellPage.xaml
+++ b/Cyberduck/Cyberduck/Views/ShellPage.xaml
@@ -2,14 +2,7 @@
     x:Class="Cyberduck.Views.ShellPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:helpers="using:Cyberduck.Helpers"
-    xmlns:behaviors="using:Cyberduck.Behaviors"
-    xmlns:i="using:Microsoft.Xaml.Interactivity"
-    xmlns:controls="using:Microsoft.UI.Xaml.Controls"
-    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-    xmlns:local="using:Cyberduck.Views.DatatransferPage.Components"
     Loaded="OnLoaded">
 
     <Grid>
@@ -34,16 +27,16 @@
                 <Image Source="/Assets/StoreLogo.scale-400.png"
                    HorizontalAlignment="Left"
                    Width="16"
-                   Height="16" />
+                   Height="16"
+                   Margin="-28,0,0,0"/>
                 <TextBlock x:Name="AppTitleBarText"
                        VerticalAlignment="Center"
                        TextWrapping="NoWrap"
-                       Style="{StaticResource CaptionTextBlockStyle}"
-                       Margin="28,0,0,0"/>
+                       Style="{StaticResource CaptionTextBlockStyle}"/>
             </Grid>
             <Grid Grid.Column="1">
                 <AutoSuggestBox PlaceholderText="Suchen" QueryIcon="Find" TextChanged="AutoSuggestBox_TextChanged" SuggestionChosen="AutoSuggestBox_SuggestionChosen"
- Height="32" MinWidth="200"/>
+                    Height="32" MinWidth="200"/>
             </Grid>
             <Grid Grid.Column="2">
             </Grid>
