--- a/Cyberduck/Cyberduck/Views/Dialogs/NewConnectionDialogContent.xaml
+++ b/Cyberduck/Cyberduck/Views/Dialogs/NewConnectionDialogContent.xaml
@@ -1,60 +1,55 @@
-﻿<Page
-    x:Class="Cyberduck.Views.NewConnectionDialogContent"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
-    mc:Ignorable="d">
+﻿<Page x:Class="Cyberduck.Views.NewConnectionDialogContent"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
+      mc:Ignorable="d">
 
-    <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MinWidth= "498">
-		<!-- Content body -->
+    <!-- Custom styling of DataGrid -->
+    <Page.Resources>
+        <ResourceDictionary>
+            <SolidColorBrush x:Key="DataGridCellFocusVisualPrimaryBrush" Color="Transparent"/>
+            <SolidColorBrush x:Key="DataGridCellFocusVisualSecondaryBrush" Color="Transparent"/>
+        </ResourceDictionary>
+    </Page.Resources>
+
+    <StackPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" MinWidth="498">
+
         <TextBox Header="Quick Connect" PlaceholderText="Gib die Serveradresse ein..." Margin="0,0,0,32"/>
         <TextBlock Text="Wähle eine Verbindung aus deinem Verlauf..." Margin="0,0,0,8"/>
-        <ScrollViewer Height="240" ZoomMode="Enabled" CornerRadius="8" BorderBrush="#f0f0f0" BorderThickness="1"
-            IsTabStop="True" IsVerticalScrollChainingEnabled="True"
-            HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Auto"
-            VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
 
-            <!--<ListBox Background="White">
-                <TextBlock Text="Arial" FontFamily="Arial"/>
-                <TextBlock Text="Courier New" FontFamily="Courier New"/>
-                <TextBlock Text="Times New Roman" FontFamily="Times New Roman"/>
-                <TextBlock Text="Arial" FontFamily="Arial"/>
-                <TextBlock Text="Courier New" FontFamily="Courier New"/>
-                <TextBlock Text="Times New Roman" FontFamily="Times New Roman"/>
-                <TextBlock Text="Arial" FontFamily="Arial"/>
-                <TextBlock Text="Courier New" FontFamily="Courier New"/>
-                <TextBlock Text="Times New Roman" FontFamily="Times New Roman"/>
-                <TextBlock Text="Arial" FontFamily="Arial"/>
-                <TextBlock Text="Courier New" FontFamily="Courier New"/>
-                <TextBlock Text="Times New Roman" FontFamily="Times New Roman"/>
-                <TextBlock Text="Arial" FontFamily="Arial"/>
-                <TextBlock Text="Courier New" FontFamily="Courier New"/>
-                <TextBlock Text="Times New Roman" FontFamily="Times New Roman"/>
-            </ListBox>-->
+        <ScrollViewer Height="240" ZoomMode="Enabled" CornerRadius="8" BorderBrush="#f0f0f0" BorderThickness="1"
+                      IsTabStop="True" IsVerticalScrollChainingEnabled="True"
+                      HorizontalScrollMode="Disabled" HorizontalScrollBarVisibility="Disabled"
+                      VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Auto">
 
             <Grid x:Name="ContentArea">
-                <controls:DataGrid
-            AutoGenerateColumns="False"
-            GridLinesVisibility="Horizontal"
-            ItemsSource="{x:Bind ViewModel.Source, Mode=OneWay}">
-                    <controls:DataGrid.Resources>
-                        <SolidColorBrush x:Key="DataGridColumnHeaderBackgroundColor" Color="Transparent" />
-                    </controls:DataGrid.Resources>
+                
+                <controls:DataGrid AutoGenerateColumns="False"
+                                   GridLinesVisibility="None"
+                                   ItemsSource="{Binding HistoryItems, Mode=OneWay}"
+                                   IsReadOnly="True"
+                                   HorizontalAlignment="Stretch"
+                                   AlternatingRowBackground="#F9F9F9"
+                                   RowHeight="40">
+
                     <controls:DataGrid.Columns>
-                         <!-- TODO: Replace column definitions to match real data. Consider adding Header values to Resources.resw. -->
-                        <controls:DataGridTextColumn Binding="{Binding OrderID}" Header="OrderID" />
-                        <controls:DataGridTextColumn Binding="{Binding OrderDate}" Header="OrderDate" />
-                        <controls:DataGridTextColumn Binding="{Binding Status}" Header="Status" />
+                        <controls:DataGridTemplateColumn Header="Name" MinWidth="165" MaxWidth="165">
+                            <controls:DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                                        <FontIcon Glyph="&#xEDA2;" Margin="12,0,0,0" />
+                                        <TextBlock Text="{Binding ConnectionName}" Margin="12,0,0,0" />
+                                    </StackPanel>
+                                </DataTemplate>
+                            </controls:DataGridTemplateColumn.CellTemplate>
+                        </controls:DataGridTemplateColumn>
+                        <controls:DataGridTextColumn Binding="{Binding ModificationDate}" Header="Zuletzt geöffnet" IsReadOnly="True" MinWidth="165" MaxWidth="165" />
+                        <controls:DataGridTextColumn Binding="{Binding Type}" Header="Verbindungstyp" IsReadOnly="True" Width="166" MinWidth="166" />
                     </controls:DataGrid.Columns>
                 </controls:DataGrid>
             </Grid>
-
         </ScrollViewer>
-
-
-        
     </StackPanel>
-
 </Page>
